Update index.html with paper link

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <tbody>
         <tr>
           <td align="center" width="200px">
-            <span style="font-size:24px"><a href="https://arxiv.org/"> [Paper] </a></span>
+            <span style="font-size:24px"><a href="https://arxiv.org/pdf/2301.04650.pdf"> [Paper] </a></span>
           </td>
 
           <td align="center" width="200px">
