--- a/index.html
+++ b/index.html
@@ -276,25 +276,23 @@
     <br><hr><br>
 
     <!-- BibTeX -->
-    <!-- <p align="center"><span style="font-size:30px"> BibTeX </span></p>
+    <p align="center"><span style="font-size:30px"> BibTeX </span></p>
     <p align="justify">
       <span style="font-size:20px">
         <pre>
           <code>
-            @misc{placeholder,
-              title={placeholder}, 
-              author={placeholder},
-              year={2023},
-              eprint={placeholder},
-              archivePrefix={arXiv},
-              primaryClass={cs.CV}
+            @article{venkat2023geometry,
+              title={Geometry-biased Transformers for Novel View Synthesis},
+              author={Venkat, Naveen and Agarwal, Mayank and Singh, Maneesh and Tulsiani, Shubham},
+              journal={arXiv preprint arXiv:2301.04650},
+              year={2023}
             }
           </code>
         </pre>
       </span>
     </p>
 
-    <hr><br> -->
+    <hr><br>
 
     <!-- ACKNOWLEDGEMENTS -->
     <p align="center"><span style="font-size:30px"> Acknowledgements </span></p>
